# kg-engine

./: .gitignore  .pre-commit-config.yaml  TODO.md  graph.dot  kg_config.yaml  pyproject.toml
.claude/: settings.json
.claude/hooks/: post-write.sh
src/kg/: __init__.py  __main__.py  cli.py  config.py
src/kg/core/: graph.py  index.py  verify.py
tests/: __init__.py  conftest.py  test_graph.py  test_index.py
tests/integration/: test_graph_integration.py  test_index_integration.py
