[project]
name = "kg"
version = "0.1.0"
description = "Knowledge Graph engine with semantic search"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0.2",
    "lancedb>=0.5.0",
    "sentence-transformers>=2.2.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "nltk>=3.9.1",
    "rich>=13.0",
]

[project.scripts]
kg = "kg.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "ruff>=0.1",
]